[package]
name = "volt"
version = "0.0.1"
edition = "2021"

[features]
wayland = []

[dependencies]
anyhow = "1.0.79"
downcast-rs = "1.2.0"
gl-rs = { package = "gl", version = "0.14.0" }
glutin = "0.31.2"
glutin-winit = "0.4.2"
image = "0.24.8"
raw-window-handle = "0.5.0"
skia = { package = "skia-safe", version = "0.70.0", features = [
	"gl",
	"wayland",
	"shaper",
	"textlayout",
	"svg",
] }
tokio = { version = "1.35.1", features = ["full"] }
winit = "0.29.10"

[[example]]
name = "hello_world"
required-features = ["wayland"]
